--- a/validator/static/css/scheme.css
+++ b/validator/static/css/scheme.css
@@ -77,6 +77,9 @@
 .custom-switch .custom-control-input[name='ref-parametrised_filters']:disabled:checked+label{
     color: #000;
 }
+div > label.custom-control-label{
+  width: 95%;
+}
 
 .alert-danger {
     color: rgb(255, 108, 92);
@@ -315,4 +318,3 @@ label[for="depth_to"]{
 label[for="depth_from"]{
     margin-right: .12rem;
 }
-
