--- a/validator/templates/admin/qa4sm_statistics.html
+++ b/validator/templates/admin/qa4sm_statistics.html
@@ -12,8 +12,7 @@
 <section>
     <h1> Currently we have <b>{{ stats.number_of_users }}</b> users </h1>
     <h1> Up to now <b>{{ stats.number_of_validations }}</b> {% if stats.number_of_validations == 1 %} validation has {%
-        else %}
-        validations have {% endif%} been run</h1>
+        else %} validations have {% endif%} been run</h1>
     <h1> The user who runs validations most frequently is <b>{{stats.most_frequent_user.name}}</b> and he/she has run
         <b>{{stats.most_frequent_user.validation_num}}</b> by now</h1>
 </section>
@@ -42,15 +41,12 @@
     <a href="#" id='hide_user_info'> Hide information</a>
 </section>
 
+// Plot divs
 <div id="val_nums_by_users" class="plot_div"></div>
 <div id="validations_in_time" class="plot_div"></div>
 <div id="datasets_cumulative" class="plot_div"></div>
 
 <script type="text/javascript">
-  // hiding ifo on a user
-  $('#hide_user_info').on('click', function(){
-    $('#user_info')[0].hidden = true;
-  })
  // showing info on a user
   function show_info(info){
     $('#user_info')[0].hidden = false;
@@ -61,7 +57,6 @@
   }
 
   function user_datasets_plot(used_datasets, div_id){
-    console.log(used_datasets)
     var datasets = used_datasets.datasets
     var versions = used_datasets.versions
     var dataset_counts = used_datasets.dataset_count
@@ -88,20 +83,38 @@
                 'used_datasets': return_data['datasets_used']
               }
               show_info(info)
-              // console.log(info.used_datasets)
               user_datasets_plot(info.used_datasets, 'user_datasets_plot')
-              // console.log(info.username, info.validations_num)
         }
       });
   }
 
 
+// taking statistics on a user on change and on click
 $("#users_list").change(ajax_show_user_info)
 $("#users_list").click(ajax_show_user_info)
+// hiding ifo on a user
+$('#hide_user_info').on('click', function(){
+  $('#user_info')[0].hidden = true;
+})
 
 </script>
 
 <script>
+// Common plot parameters:
+  // ============ Font size =================
+  var title_font_size = 20;
+  var axis_font_size = 16;
+  var tick_font_size = 12;
+  // ============ Font type =================
+  var title_font_type = 'Arial, monospace';
+  var axis_font_type = 'Arial, monospace';
+  var tick_font_type = 'Arial, monospace';
+  // ============ Colors =================
+  var plot_bgcolor = 'rgb(240, 240, 240)';
+  var basic_color = 'rgb(0, 204, 204)'//'rgb(255,20,147)';
+  var versions_colors = ['rgb(0, 204, 204)', 'rgb(0, 204, 0)', 'rgb(204, 0, 0)', 'rgb(204, 0, 204)']
+
+
 // Auxiliary functions for plotting:
 function datasets_stack_barplot(x_dataset, y_dataset, names){
   /**
@@ -111,6 +124,7 @@ function datasets_stack_barplot(x_dataset, y_dataset, names){
  * @param  {[object]} names [list of values or other lists containing names of values shown as stacked bars (e.g. datasets names)]
  * @return {[object]}[list of dicts ready to be used in plotly plot function]
  */
+
   var plot_data = []
   for (var dataset_ind=0; dataset_ind<x_dataset.length; dataset_ind++){
     for (var vers_ind=0; vers_ind<names[dataset_ind].length; vers_ind++){
@@ -127,6 +141,7 @@ function datasets_stack_barplot(x_dataset, y_dataset, names){
 }
 
 function dataset_barplot_layout(){
+  // wraped this layout in a funciton because it's used at least in two places
   var layout = {
     barmode: 'stack',
     plot_bgcolor: plot_bgcolor,
@@ -164,20 +179,6 @@ function dataset_barplot_layout(){
   }
   return layout
 }
-
-// Common plot parameters:
-  // ============ Font size =================
-  var title_font_size = 20;
-  var axis_font_size = 16;
-  var tick_font_size = 12;
-  // ============ Font type =================
-  var title_font_type = 'Arial, monospace';
-  var axis_font_type = 'Arial, monospace';
-  var tick_font_type = 'Arial, monospace';
-  // ============ Colors =================
-  var plot_bgcolor = 'rgb(240, 240, 240)';
-  var basic_color = 'rgb(0, 204, 204)'//'rgb(255,20,147)';
-  var versions_colors = ['rgb(0, 204, 204)', 'rgb(0, 204, 0)', 'rgb(204, 0, 0)', 'rgb(204, 0, 204)']
 
   //==========================================================================================
     // Datasets counts - general
@@ -336,8 +337,6 @@ function dataset_barplot_layout(){
 };
 
 Plotly.newPlot(validations_in_time, validations_in_time_data, validations_in_time_layout);
-
-
 
 </script>
 
