small code cleansing

--- a/validator/templates/admin/qa4sm_statistics.html
+++ b/validator/templates/admin/qa4sm_statistics.html
@@ -41,7 +41,7 @@
     <a href="#" id='hide_user_info'> Hide information</a>
 </section>
 
-// Plot divs
+ <!-- Plot divs -->
 <div id="val_nums_by_users" class="plot_div"></div>
 <div id="validations_in_time" class="plot_div"></div>
 <div id="datasets_cumulative" class="plot_div"></div>
