selecting year and month added

--- a/validator/templates/validator/validate.html
+++ b/validator/templates/validator/validate.html
@@ -935,14 +935,20 @@
 }
 
     </script>
-    
+
     <!-- datepicker widget -->
     <link href ="/static/css/jquery-ui.css" rel = "stylesheet">
     <script src="/static/js/jquery-ui-1.12.1.js"></script>
     <script>
      $(function() {
-        $( "#id_interval_from" ).datepicker();
-        $( "#id_interval_to" ).datepicker();
+        $( "#id_interval_from" ).datepicker({
+          changeMonth: true,
+          changeYear: true
+        });
+        $( "#id_interval_to" ).datepicker({
+          changeMonth: true,
+          changeYear: true
+        });
      });
     </script>
 
