--- a/validator/static/css/scheme.css
+++ b/validator/static/css/scheme.css
@@ -325,3 +325,10 @@ button.ui-datepicker-close.ui-state-default.ui-priority-primary.ui-corner-all {
     background: #00AAE3;
     color: #FFFFFF
 }
+select.ui-datepicker-year, select.ui-datepicker-month {
+  border-radius: 5px;
+  background: #fff;
+}
+button.ui-datepicker-trigger{
+  margin-left: 7px;
+}
