--- a/validator/templates/validator/validate.html
+++ b/validator/templates/validator/validate.html
@@ -692,16 +692,15 @@
                     } else{
                         $('#id_target_hidden_input_version').val('')
                     }
-                    ajax_take_versions_info()
+                    start_ajax_to_set_valiadtion_period()
                 }
             });
         }
 
-        function ajax_take_versions_info() {
-            //using ajax to read the network info according to its version
-            versionIds = find_current_ids()
+        function ajax_take_versions_info(versionIds, funcs_set, args_names) {
+            //using ajax to read info according to dataset versions;
+
             var url = $("#validation_form").attr("version-info-url");
-            // var versionId = $('#id_target_hidden_input_version').val();
             $.ajax({
                 url: url,
                 traditional: true,
@@ -709,11 +708,30 @@
                 success: function (return_data) {
                   var intervals_from = return_data['intervals_from'];
                   var intervals_to = return_data['intervals_to'];
-                  console.log(intervals_from)
-                  console.log(intervals_to)
+
+                  // taking all parameters that the ajax function return
+                  all_args = arguments[0]
+                  param_list = get_list_of_params(all_args, args_names)
+                  for (func in funcs_set){
+                    funcs_set[func](param_list)
+                  };
                 }
             });
           };
+
+          function get_list_of_params(args, args_names){
+            param_list = []
+            for (arg_name in args_names){
+              var name = args_names[arg_name]
+              param_list.push(args[name])
+            }
+            return param_list
+          }
+
+          function test(params){
+            console.log(params)
+            console.log('Monika')
+          }
 
           function find_current_ids(){
             var versions_list = $('select[name*=version]');
@@ -728,6 +746,10 @@
             return ids_list;
           };
 
+          function start_ajax_to_set_valiadtion_period(){
+            var versionIds = find_current_ids()
+            ajax_take_versions_info(versionIds, [test], ['intervals_from', 'intervals_to'])
+          }
 
         function change_tab_name() {
             var datasetName = $(this).find('option:selected').text();
